# flexmof-lammps-interface

./: README.md  pyproject.toml  setup.py
lammps_interface/: ForceFields.py  InputHandler.py  Molecules.py  gas_models.py  lammps_main.py  water_models.py
